# research_summarizer

./: .env.example  .gitignore  README.md  app.py  package-lock.json  package.json  promptfoo.yaml  pyproject.toml
.streamlit/: secrets.toml
app/: globals.css  layout.tsx
app/api/coach/: route.ts
app/app/: AppShell.tsx  actions.ts  page.tsx
app/auth/callback/: route.ts
app/login/: page.tsx
lib/: plan-data.ts  types.ts
lib/supabase/: middleware.ts  server.ts
src/: __init__.py  chain.py  constants.py  input_processor.py  loader.py  memory_types.py  prompts.py  vectorstore.py
src/agents/: __init__.py  market_research_agent.py
src/components/: document_selector.py
src/config/: __init__.py  schema.py
src/documents/: AI Coach feedback with Joan_otter_ai.txt  [☎️ Interview] - FindVendor __ Max_otter_ai.txt  [☎️ User Interview] - FindVendor __ Christian_otter_ai.txt  [☎️ User Interview] - FindVendor __ David_otter_ai.txt  [☎️ User Interview] - FindVendor __ Huy_otter_ai.txt  [☎️ User Interview] - FindVendor __ Radu_otter_ai.txt  [☎️ User Interview] - FindVendor __ Richard_otter_ai.txt  [☎️ User Interview] - FindVendor __ Torsten_otter_ai.txt  janek_löffler.txt  marcus_from_fightclub.txt  ☎️ User interview x Steffen Welsch.txt
src/evaluation/: rag_evaluator copy.py  rag_evaluator.py
src/ui/: components.py
src/ui/components/: __init__.py  chat_interface.py  (+1 more)
src/utils/: __init__.py  chain.py  document_selector.py  github_processor.py  loader.py  memory.py  pdf_generator.py  vectorstore.py  vectorstore_utils.py
supabase/migrations/: 0001_initial.sql
(+20 files in other folders)
