[tool.poetry]
name = "user-research-chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
chromadb = "0.4.24"
pydantic = "1.10.18"
streamlit = "1.33.0"
langchain-community = "0.2.17"
langchain-core = "0.2.41"
tiktoken = "0.7.0"
langchain-openai = "0.1.25"
langchainhub = "0.1.21"
langchain = "0.2.16"
langchain-google-community = "1.0.8"
pypdf2 = "3.0.1"
altair = "4.0"
oauth2client = "<4.0.0"
bs4 = "0.0.2"
google-auth-oauthlib = "0.4.1"
google-cloud-secret-manager = "2.20.2"
protobuf = "4.25.4"
pillow = "9.5.0"
google-cloud-discoveryengine = "0.12.2"
faiss-cpu = "1.8.0.post1"
unstructured = "0.15.13"
python-docx = "1.1.2"
exception = "0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"